[metadata]
name = printeq
version = 0.0.4
author = RayCurse
description = Render a latex math equation to the terminal.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RayCurse/printeq
project_urls = 
	Bug Tracker = https://github.com/RayCurse/printeq/issues
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent

[options]
packages = find:
scripts = bin/printeq
python_requires = >=3.5
